--- a/Módulo III - Aprendendo HTML e elementos/42 a 52/index.html
+++ b/Módulo III - Aprendendo HTML e elementos/42 a 52/index.html
@@ -34,6 +34,7 @@
             background: rgba(128, 128, 128, 0.219);
         }
 
+        /* Efeito zebra */
         tbody tr:nth-child(even) {
             background: whitesmoke;
         }
